packages/pulse-core/force-app/main/default/objects/Workflow_Projection__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Text</type>
    <length>40</length>
</CustomField>