packages/pulse-core/force-app/main/default/objects/Workflow_Projection__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Text</type>
    <length>40</length>
</CustomField>