packages/pulse-core/force-app/main/default/objects/Workflow_Projection__mdt/fields/Workflow_Key__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Key__c</fullName>
    <label>Workflow Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>