packages/pulse-core/force-app/main/default/objects/Workflow_Projection__mdt/fields/Write_Precedence__c.field-meta.xml
<CustomField>
    <fullName>Write_Precedence__c</fullName>
    <label>Write Precedence</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>